--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8,12 +8,17 @@ body {
 	font-weight: 400;
 	color: #000000;
 	background-color: #424242;
+	
+	background: #C2BCB8;
+	background: -webkit-linear-gradient(top right, #C2BCB8, #19B4C9);
+	background: -moz-linear-gradient(top right, #C2BCB8, #19B4C9);
+	background: linear-gradient(top right, #C2BCB8, #19B4C9);
 
-	background: #F8D353;
+	/*background: #F8D353;
 	background: -webkit-linear-gradient(top left, #F8D353, #FF5C5A);
 	background: -moz-linear-gradient(top left, #F8D353, #FF5C5A);
 	background: linear-gradient(top left, #F8D353, #FF5C5A);
-
+*/
 /*	background: #B0D09C;
 	background: -webkit-linear-gradient(top left, #B0D09C, #4B8244);
 	background: -moz-linear-gradient(top left, #B0D09C, #4B8244);
